--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <body>
   
-  <!-- <video autoplay muted class="video">
+  <video autoplay muted class="video">
     <source src="images/intro.mp4" type="video/mp4">
-  </video>   -->
+  </video>
 
   <header>
     <nav>
